boreal/tests/assets/invalid_files/parsing/str_to_int4.yar
rule a {
    strings:
        $a = /a{0,10000000000}/
    condition:
        $a
}
